c7/src/parser/parser.output
Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmts stmt
    3      | stmts error
    4      | stmt

    5 stmt: func_stmt
    6     | var_decl_stmt

    7 func_stmt: TYPE ID PARENT_LEFT param_list PARENT_RIGHT compound_block_stmt

    8 var_decl_stmt: TYPE ID SEMICOLON

    9 param_list: param_list COMMA TYPE ID
   10           | TYPE ID
   11           | %empty

   12 simple_param_list: simple_param_list COMMA ID
   13                  | ID
   14                  | %empty

   15 flex_block_struct: compound_block_stmt
   16                  | block_stmt

   17 compound_block_stmt: BRACK_LEFT block_stmts BRACK_RIGHT
   18                    | BRACK_LEFT BRACK_RIGHT

   19 block_stmts: block_stmts block_stmt
   20            | block_stmt

   21 block_stmt: var_decl_stmt
   22           | func_call SEMICOLON
   23           | set_func_call SEMICOLON
   24           | flow_control
   25           | READ PARENT_LEFT ID PARENT_RIGHT SEMICOLON
   26           | WRITE PARENT_LEFT simple_expr PARENT_RIGHT SEMICOLON
   27           | WRITELN PARENT_LEFT simple_expr PARENT_RIGHT SEMICOLON
   28           | ID ASSIGN simple_expr SEMICOLON
   29           | RETURN simple_expr SEMICOLON

   30 flow_control: IF PARENT_LEFT or_cond_expr PARENT_RIGHT flex_block_struct
   31             | IF PARENT_LEFT or_cond_expr PARENT_RIGHT flex_block_struct ELSE flex_block_struct
   32             | FORALL PARENT_LEFT set_expr PARENT_RIGHT flex_block_struct
   33             | FOR PARENT_LEFT opt_param opt_param PARENT_RIGHT flex_block_struct
   34             | FOR PARENT_LEFT opt_param opt_param for_expression PARENT_RIGHT flex_block_struct
   35             | error

   36 opt_param: SEMICOLON
   37          | for_expression SEMICOLON

   38 for_expression: decl_or_cond_expr
   39               | for_expression COMMA decl_or_cond_expr

   40 decl_or_cond_expr: or_cond_expr
   41                  | TYPE ID ASSIGN simple_expr
   42                  | ID ASSIGN simple_expr

   43 or_cond_expr: or_cond_expr OR_OP and_cond_expr
   44             | and_cond_expr

   45 and_cond_expr: and_cond_expr AND_OP unary_cond_expr
   46              | unary_cond_expr

   47 unary_cond_expr: NOT_OP unary_cond_expr
   48                | eq_cond_expr

   49 eq_cond_expr: eq_cond_expr equal_ops rel_cond_expr
   50             | rel_cond_expr

   51 equal_ops: EQ_OP
   52          | NE_OP

   53 rel_cond_expr: rel_cond_expr rel_ops rel_cond_stmt
   54              | rel_cond_stmt

   55 rel_cond_stmt: arith_expr
   56              | EMPTY
   57              | func_expr

   58 rel_ops: L_OP
   59        | G_OP
   60        | LE_OP
   61        | GE_OP
   62        | IN

   63 set_expr: simple_expr IN simple_expr

   64 func_call: ID PARENT_LEFT simple_param_list PARENT_RIGHT

   65 set_func_call: IS_SET PARENT_LEFT ID PARENT_RIGHT
   66              | ADD_SET PARENT_LEFT set_expr PARENT_RIGHT
   67              | REMOVE PARENT_LEFT set_expr PARENT_RIGHT
   68              | EXISTS PARENT_LEFT set_expr PARENT_RIGHT

   69 simple_expr: arith_expr
   70            | func_cte_expr

   71 func_cte_expr: EMPTY
   72              | STRING
   73              | CHAR
   74              | func_expr

   75 func_expr: func_call
   76          | set_func_call
   77          | PARENT_LEFT func_cte_expr PARENT_RIGHT

   78 arith_expr: arith_expr ADD term
   79           | arith_expr SUB term
   80           | term

   81 term: term MULT factor
   82     | term DIV factor
   83     | factor

   84 factor: INTEGER
   85       | FLOAT
   86       | ID
   87       | PARENT_LEFT arith_expr PARENT_RIGHT


Terminals, with rules where they appear

    $end (0) 0
    error <expression> (256) 3 35
    BRACK_LEFT <op> (258) 17 18
    BRACK_RIGHT <op> (259) 17 18
    PARENT_LEFT <op> (260) 7 25 26 27 30 31 32 33 34 64 65 66 67 68 77 87
    PARENT_RIGHT <op> (261) 7 25 26 27 30 31 32 33 34 64 65 66 67 68 77 87
    SEMICOLON <op> (262) 8 22 23 25 26 27 28 29 36 37
    ADD <op> (263) 78
    SUB <op> (264) 79
    MULT <op> (265) 81
    DIV <op> (266) 82
    CHAR <op> (267) 73
    COMMA <op> (268) 9 12 39
    ASSIGN <op> (269) 28 41 42
    NOT_OP <op> (270) 47
    L_OP <op> (271) 58
    G_OP <op> (272) 59
    READ <str_value> (273) 25
    WRITE <str_value> (274) 26
    WRITELN <str_value> (275) 27
    TYPE <str_value> (276) 7 8 9 10 41
    EMPTY <str_value> (277) 56 71
    STRING <str_value> (278) 72
    RETURN <str_value> (279) 29
    FORALL <str_value> (280) 32
    FOR <str_value> (281) 33 34
    IN <str_value> (282) 62 63
    IS_SET <str_value> (283) 65
    ADD_SET <str_value> (284) 66
    REMOVE <str_value> (285) 67
    EXISTS <str_value> (286) 68
    IF <str_value> (287) 30 31
    ELSE <str_value> (288) 31
    EQ_OP <str_value> (289) 51
    NE_OP <str_value> (290) 52
    LE_OP <str_value> (291) 60
    GE_OP <str_value> (292) 61
    OR_OP <str_value> (293) 43
    AND_OP <str_value> (294) 45
    INTEGER <int_value> (295) 84
    ID <int_value> (296) 7 8 9 10 12 13 25 28 41 42 64 65 86
    FLOAT <float_value> (297) 85
    THEN (298)


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    program (45)
        on left: 1
        on right: 0
    stmts (46)
        on left: 2 3 4
        on right: 1 2 3
    stmt (47)
        on left: 5 6
        on right: 2 4
    func_stmt <expression> (48)
        on left: 7
        on right: 5
    var_decl_stmt <expression> (49)
        on left: 8
        on right: 6 21
    param_list <expression> (50)
        on left: 9 10 11
        on right: 7 9
    simple_param_list <expression> (51)
        on left: 12 13 14
        on right: 12 64
    flex_block_struct <expression> (52)
        on left: 15 16
        on right: 30 31 32 33 34
    compound_block_stmt <expression> (53)
        on left: 17 18
        on right: 7 15
    block_stmts <expression> (54)
        on left: 19 20
        on right: 17 19
    block_stmt <expression> (55)
        on left: 21 22 23 24 25 26 27 28 29
        on right: 16 19 20
    flow_control <expression> (56)
        on left: 30 31 32 33 34 35
        on right: 24
    opt_param <expression> (57)
        on left: 36 37
        on right: 33 34
    for_expression <expression> (58)
        on left: 38 39
        on right: 34 37 39
    decl_or_cond_expr <expression> (59)
        on left: 40 41 42
        on right: 38 39
    or_cond_expr <expression> (60)
        on left: 43 44
        on right: 30 31 40 43
    and_cond_expr <expression> (61)
        on left: 45 46
        on right: 43 44 45
    unary_cond_expr <expression> (62)
        on left: 47 48
        on right: 45 46 47
    eq_cond_expr <expression> (63)
        on left: 49 50
        on right: 48 49
    equal_ops <expression> (64)
        on left: 51 52
        on right: 49
    rel_cond_expr <expression> (65)
        on left: 53 54
        on right: 49 50 53
    rel_cond_stmt <expression> (66)
        on left: 55 56 57
        on right: 53 54
    rel_ops <expression> (67)
        on left: 58 59 60 61 62
        on right: 53
    set_expr <expression> (68)
        on left: 63
        on right: 32 66 67 68
    func_call <expression> (69)
        on left: 64
        on right: 22 75
    set_func_call <expression> (70)
        on left: 65 66 67 68
        on right: 23 76
    simple_expr <expression> (71)
        on left: 69 70
        on right: 26 27 28 29 41 42 63
    func_cte_expr <expression> (72)
        on left: 71 72 73 74
        on right: 70 77
    func_expr <expression> (73)
        on left: 75 76 77
        on right: 57 74
    arith_expr <expression> (74)
        on left: 78 79 80
        on right: 55 69 78 79 87
    term <expression> (75)
        on left: 81 82 83
        on right: 78 79 80 81 82
    factor <expression> (76)
        on left: 84 85 86 87
        on right: 81 82 83


State 0

    0 $accept: • program $end

    TYPE  shift, and go to state 1

    program        go to state 2
    stmts          go to state 3
    stmt           go to state 4
    func_stmt      go to state 5
    var_decl_stmt  go to state 6


State 1

    7 func_stmt: TYPE • ID PARENT_LEFT param_list PARENT_RIGHT compound_block_stmt
    8 var_decl_stmt: TYPE • ID SEMICOLON

    ID  shift, and go to state 7


State 2

    0 $accept: program • $end

    $end  shift, and go to state 8


State 3

    1 program: stmts •
    2 stmts: stmts • stmt
    3      | stmts • error

    error  shift, and go to state 9
    TYPE   shift, and go to state 1

    $end  reduce using rule 1 (program)

    stmt           go to state 10
    func_stmt      go to state 5
    var_decl_stmt  go to state 6


State 4

    4 stmts: stmt •

    $end   reduce using rule 4 (stmts)
    error  reduce using rule 4 (stmts)
    TYPE   reduce using rule 4 (stmts)


State 5

    5 stmt: func_stmt •

    $end   reduce using rule 5 (stmt)
    error  reduce using rule 5 (stmt)
    TYPE   reduce using rule 5 (stmt)


State 6

    6 stmt: var_decl_stmt •

    $end   reduce using rule 6 (stmt)
    error  reduce using rule 6 (stmt)
    TYPE   reduce using rule 6 (stmt)


State 7

    7 func_stmt: TYPE ID • PARENT_LEFT param_list PARENT_RIGHT compound_block_stmt
    8 var_decl_stmt: TYPE ID • SEMICOLON

    PARENT_LEFT  shift, and go to state 11
    SEMICOLON    shift, and go to state 12


State 8

    0 $accept: program $end •

    $default  accept


State 9

    3 stmts: stmts error •

    $end   reduce using rule 3 (stmts)
    error  reduce using rule 3 (stmts)
    TYPE   reduce using rule 3 (stmts)


State 10

    2 stmts: stmts stmt •

    $end   reduce using rule 2 (stmts)
    error  reduce using rule 2 (stmts)
    TYPE   reduce using rule 2 (stmts)


State 11

    7 func_stmt: TYPE ID PARENT_LEFT • param_list PARENT_RIGHT compound_block_stmt

    TYPE  shift, and go to state 13

    PARENT_RIGHT  reduce using rule 11 (param_list)
    COMMA         reduce using rule 11 (param_list)

    param_list  go to state 14


State 12

    8 var_decl_stmt: TYPE ID SEMICOLON •

    $end   reduce using rule 8 (var_decl_stmt)
    error  reduce using rule 8 (var_decl_stmt)
    TYPE   reduce using rule 8 (var_decl_stmt)


State 13

   10 param_list: TYPE • ID

    ID  shift, and go to state 15


State 14

    7 func_stmt: TYPE ID PARENT_LEFT param_list • PARENT_RIGHT compound_block_stmt
    9 param_list: param_list • COMMA TYPE ID

    PARENT_RIGHT  shift, and go to state 16
    COMMA         shift, and go to state 17


State 15

   10 param_list: TYPE ID •

    PARENT_RIGHT  reduce using rule 10 (param_list)
    COMMA         reduce using rule 10 (param_list)


State 16

    7 func_stmt: TYPE ID PARENT_LEFT param_list PARENT_RIGHT • compound_block_stmt

    BRACK_LEFT  shift, and go to state 18

    compound_block_stmt  go to state 19


State 17

    9 param_list: param_list COMMA • TYPE ID

    TYPE  shift, and go to state 20


State 18

   17 compound_block_stmt: BRACK_LEFT • block_stmts BRACK_RIGHT
   18                    | BRACK_LEFT • BRACK_RIGHT

    error        shift, and go to state 21
    BRACK_RIGHT  shift, and go to state 22
    READ         shift, and go to state 23
    WRITE        shift, and go to state 24
    WRITELN      shift, and go to state 25
    TYPE         shift, and go to state 26
    RETURN       shift, and go to state 27
    FORALL       shift, and go to state 28
    FOR          shift, and go to state 29
    IS_SET       shift, and go to state 30
    ADD_SET      shift, and go to state 31
    REMOVE       shift, and go to state 32
    EXISTS       shift, and go to state 33
    IF           shift, and go to state 34
    ID           shift, and go to state 35

    var_decl_stmt  go to state 36
    block_stmts    go to state 37
    block_stmt     go to state 38
    flow_control   go to state 39
    func_call      go to state 40
    set_func_call  go to state 41


State 19

    7 func_stmt: TYPE ID PARENT_LEFT param_list PARENT_RIGHT compound_block_stmt •

    $end   reduce using rule 7 (func_stmt)
    error  reduce using rule 7 (func_stmt)
    TYPE   reduce using rule 7 (func_stmt)


State 20

    9 param_list: param_list COMMA TYPE • ID

    ID  shift, and go to state 42


State 21

   35 flow_control: error •

    error        reduce using rule 35 (flow_control)
    BRACK_RIGHT  reduce using rule 35 (flow_control)
    READ         reduce using rule 35 (flow_control)
    WRITE        reduce using rule 35 (flow_control)
    WRITELN      reduce using rule 35 (flow_control)
    TYPE         reduce using rule 35 (flow_control)
    RETURN       reduce using rule 35 (flow_control)
    FORALL       reduce using rule 35 (flow_control)
    FOR          reduce using rule 35 (flow_control)
    IS_SET       reduce using rule 35 (flow_control)
    ADD_SET      reduce using rule 35 (flow_control)
    REMOVE       reduce using rule 35 (flow_control)
    EXISTS       reduce using rule 35 (flow_control)
    IF           reduce using rule 35 (flow_control)
    ID           reduce using rule 35 (flow_control)


State 22

   18 compound_block_stmt: BRACK_LEFT BRACK_RIGHT •

    $end   reduce using rule 18 (compound_block_stmt)
    error  reduce using rule 18 (compound_block_stmt)
    TYPE   reduce using rule 18 (compound_block_stmt)


State 23

   25 block_stmt: READ • PARENT_LEFT ID PARENT_RIGHT SEMICOLON

    PARENT_LEFT  shift, and go to state 43


State 24

   26 block_stmt: WRITE • PARENT_LEFT simple_expr PARENT_RIGHT SEMICOLON

    PARENT_LEFT  shift, and go to state 44


State 25

   27 block_stmt: WRITELN • PARENT_LEFT simple_expr PARENT_RIGHT SEMICOLON

    PARENT_LEFT  shift, and go to state 45


State 26

    8 var_decl_stmt: TYPE • ID SEMICOLON

    ID  shift, and go to state 46


State 27

   29 block_stmt: RETURN • simple_expr SEMICOLON

    PARENT_LEFT  shift, and go to state 47
    CHAR         shift, and go to state 48
    EMPTY        shift, and go to state 49
    STRING       shift, and go to state 50
    IS_SET       shift, and go to state 30
    ADD_SET      shift, and go to state 31
    REMOVE       shift, and go to state 32
    EXISTS       shift, and go to state 33
    INTEGER      shift, and go to state 51
    ID           shift, and go to state 52
    FLOAT        shift, and go to state 53

    func_call      go to state 54
    set_func_call  go to state 55
    simple_expr    go to state 56
    func_cte_expr  go to state 57
    func_expr      go to state 58
    arith_expr     go to state 59
    term           go to state 60
    factor         go to state 61


State 28

   32 flow_control: FORALL • PARENT_LEFT set_expr PARENT_RIGHT flex_block_struct

    PARENT_LEFT  shift, and go to state 62


State 29

   33 flow_control: FOR • PARENT_LEFT opt_param opt_param PARENT_RIGHT flex_block_struct
   34             | FOR • PARENT_LEFT opt_param opt_param for_expression PARENT_RIGHT flex_block_struct

    PARENT_LEFT  shift, and go to state 63


State 30

   65 set_func_call: IS_SET • PARENT_LEFT ID PARENT_RIGHT

    PARENT_LEFT  shift, and go to state 64


State 31

   66 set_func_call: ADD_SET • PARENT_LEFT set_expr PARENT_RIGHT

    PARENT_LEFT  shift, and go to state 65


State 32

   67 set_func_call: REMOVE • PARENT_LEFT set_expr PARENT_RIGHT

    PARENT_LEFT  shift, and go to state 66


State 33

   68 set_func_call: EXISTS • PARENT_LEFT set_expr PARENT_RIGHT

    PARENT_LEFT  shift, and go to state 67


State 34

   30 flow_control: IF • PARENT_LEFT or_cond_expr PARENT_RIGHT flex_block_struct
   31             | IF • PARENT_LEFT or_cond_expr PARENT_RIGHT flex_block_struct ELSE flex_block_struct

    PARENT_LEFT  shift, and go to state 68


State 35

   28 block_stmt: ID • ASSIGN simple_expr SEMICOLON
   64 func_call: ID • PARENT_LEFT simple_param_list PARENT_RIGHT

    PARENT_LEFT  shift, and go to state 69
    ASSIGN       shift, and go to state 70


State 36

   21 block_stmt: var_decl_stmt •

    error        reduce using rule 21 (block_stmt)
    BRACK_RIGHT  reduce using rule 21 (block_stmt)
    READ         reduce using rule 21 (block_stmt)
    WRITE        reduce using rule 21 (block_stmt)
    WRITELN      reduce using rule 21 (block_stmt)
    TYPE         reduce using rule 21 (block_stmt)
    RETURN       reduce using rule 21 (block_stmt)
    FORALL       reduce using rule 21 (block_stmt)
    FOR          reduce using rule 21 (block_stmt)
    IS_SET       reduce using rule 21 (block_stmt)
    ADD_SET      reduce using rule 21 (block_stmt)
    REMOVE       reduce using rule 21 (block_stmt)
    EXISTS       reduce using rule 21 (block_stmt)
    IF           reduce using rule 21 (block_stmt)
    ID           reduce using rule 21 (block_stmt)


State 37

   17 compound_block_stmt: BRACK_LEFT block_stmts • BRACK_RIGHT
   19 block_stmts: block_stmts • block_stmt

    error        shift, and go to state 21
    BRACK_RIGHT  shift, and go to state 71
    READ         shift, and go to state 23
    WRITE        shift, and go to state 24
    WRITELN      shift, and go to state 25
    TYPE         shift, and go to state 26
    RETURN       shift, and go to state 27
    FORALL       shift, and go to state 28
    FOR          shift, and go to state 29
    IS_SET       shift, and go to state 30
    ADD_SET      shift, and go to state 31
    REMOVE       shift, and go to state 32
    EXISTS       shift, and go to state 33
    IF           shift, and go to state 34
    ID           shift, and go to state 35

    var_decl_stmt  go to state 36
    block_stmt     go to state 72
    flow_control   go to state 39
    func_call      go to state 40
    set_func_call  go to state 41


State 38

   20 block_stmts: block_stmt •

    error        reduce using rule 20 (block_stmts)
    BRACK_RIGHT  reduce using rule 20 (block_stmts)
    READ         reduce using rule 20 (block_stmts)
    WRITE        reduce using rule 20 (block_stmts)
    WRITELN      reduce using rule 20 (block_stmts)
    TYPE         reduce using rule 20 (block_stmts)
    RETURN       reduce using rule 20 (block_stmts)
    FORALL       reduce using rule 20 (block_stmts)
    FOR          reduce using rule 20 (block_stmts)
    IS_SET       reduce using rule 20 (block_stmts)
    ADD_SET      reduce using rule 20 (block_stmts)
    REMOVE       reduce using rule 20 (block_stmts)
    EXISTS       reduce using rule 20 (block_stmts)
    IF           reduce using rule 20 (block_stmts)
    ID           reduce using rule 20 (block_stmts)


State 39

   24 block_stmt: flow_control •

    error        reduce using rule 24 (block_stmt)
    BRACK_RIGHT  reduce using rule 24 (block_stmt)
    READ         reduce using rule 24 (block_stmt)
    WRITE        reduce using rule 24 (block_stmt)
    WRITELN      reduce using rule 24 (block_stmt)
    TYPE         reduce using rule 24 (block_stmt)
    RETURN       reduce using rule 24 (block_stmt)
    FORALL       reduce using rule 24 (block_stmt)
    FOR          reduce using rule 24 (block_stmt)
    IS_SET       reduce using rule 24 (block_stmt)
    ADD_SET      reduce using rule 24 (block_stmt)
    REMOVE       reduce using rule 24 (block_stmt)
    EXISTS       reduce using rule 24 (block_stmt)
    IF           reduce using rule 24 (block_stmt)
    ID           reduce using rule 24 (block_stmt)


State 40

   22 block_stmt: func_call • SEMICOLON

    SEMICOLON  shift, and go to state 73


State 41

   23 block_stmt: set_func_call • SEMICOLON

    SEMICOLON  shift, and go to state 74


State 42

    9 param_list: param_list COMMA TYPE ID •

    PARENT_RIGHT  reduce using rule 9 (param_list)
    COMMA         reduce using rule 9 (param_list)


State 43

   25 block_stmt: READ PARENT_LEFT • ID PARENT_RIGHT SEMICOLON

    ID  shift, and go to state 75


State 44

   26 block_stmt: WRITE PARENT_LEFT • simple_expr PARENT_RIGHT SEMICOLON

    PARENT_LEFT  shift, and go to state 173
    CHAR         shift, and go to state 174
    EMPTY        shift, and go to state 175
    STRING       shift, and go to state 176
    IS_SET       shift, and go to state 177
    ADD_SET      shift, and go to state 178
    REMOVE       shift, and go to state 179
    EXISTS       shift, and go to state 180
    INTEGER      shift, and go to state 181
    ID           shift, and go to state 182
    FLOAT        shift, and go to state 183

    func_call      go to state 184
    set_func_call  go to state 185
    simple_expr    go to state 76
    func_cte_expr  go to state 186
    func_expr      go to state 187
    arith_expr     go to state 188
    term           go to state 189
    factor         go to state 190


State 45

   27 block_stmt: WRITELN PARENT_LEFT • simple_expr PARENT_RIGHT SEMICOLON
